# kdub

./: .chutney-commit  .gitignore  .gitmodules  .shellcheckrc  Cargo.toml  LICENSE  PLAN.md  README.md  codecov.yml  install-mise.sh  mise.toml
.github/workflows/: card-test.yml  integration-test.yml  lint.yml  tails-test.yml  unit-test.yml
config/: gpg-agent.conf
crates/kdub/: CHANGELOG.md  Cargo.toml
crates/kdub-lib/: Cargo.toml  tails-signing.key
crates/kdub-lib/src/: card_setup.rs  defaults.rs  doctor.rs  error.rs  keygen.rs  lib.rs  tails.rs  tails_download.rs  tails_flash.rs  tails_persist.rs  ykman.rs
crates/kdub-lib/src/snapshots/: kdub_lib__doctor__tests__doctor_json_with_tails.snap  kdub_lib__doctor__tests__doctor_plain_text_with_tails.snap  kdub_lib__tails__tests__persist_unsupported_error_snapshot.snap  kdub_lib__tails__tests__persistence_conf_snapshot.snap  kdub_lib__tails_download__tests__macos_arm64_warning_snapshot.snap  kdub_lib__tails_flash__tests__format_device_table_snapshot.snap
crates/kdub-lib/tests/: tdd_anchors.rs
crates/kdub-lib/tests/fixtures/: test_iso.bin.sig  test_tails_signer.asc
lib/: common.sh
mise-tasks/: lint  test
mise-tasks/gpg/: backup  create  install-deps  list  publish  renew  rotate  yubikey-info  yubikey-provision  yubikey-reset  yubikey-setup
src/: install-mise.sh  mise.local.toml.example  mise.toml
src/lib/: common.sh  platform.sh
test/: MANUAL_TESTS.md  test_helper.bash
test/ci/: tails-qemu-test.sh  tails-remote-shell.py
test/fixtures/: card-status-factory.txt  card-status-provisioned.txt  mock-gpg  (+6 more)
(+44 files in other folders)
