[package]
name = "kdub-lib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
secrecy.workspace = true
chrono.workspace = true
pgp.workspace = true
rand.workspace = true
toml.workspace = true
directories.workspace = true

ureq.workspace = true
urlencoding.workspace = true
sha1.workspace = true
sha2.workspace = true
memmap2.workspace = true
plist.workspace = true
zipsign-api.workspace = true
flate2.workspace = true
tar.workspace = true

openpgp-card.workspace = true
openpgp-card-rpgp.workspace = true
card-backend-pcsc.workspace = true
tempfile.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dev-dependencies]
tempfile.workspace = true
mockall = "0.14"
rstest = { workspace = true }
insta = { version = "1", features = ["filters"] }
